# UIDT-Framework-v3.9-Canonical

./: .editorconfig  .git_msg.txt  .gitattributes  .gitignore  .gitlab-ci.yml  AGENTS.md  CHANGELOG.md  CITATION.cff  CODEOWNERS  CONTRIBUTING.md  CRITIQUE_LOG.md  Dockerfile  FORMALISM.md  GLOSSARY.md  LICENSE.md  PR_TEMPLATE.md  PR_TEMPLATE_UIDT_v3.9_Audit.md  PR_TEMPLATE_WP1_NLO_FRG.md  PR_TEMPLATE_v361_MC.md  PR_TICK-20260224_Phase3.md  README.md  REPRODUCE.md  ROADMAP.md  SECURITY.md  STATUS.md  WP4_PR_TEMPLATE.md  arxiv_scan.py  audit_check.py  audit_graph.py  audit_report_20260205.txt  auto_update_repo.bat  best_practices.md  commit_message.txt  create_holography_tickets.py  create_missing_prs.py  eline reproduction protocol  epistemic_risk_map.json  execute_holography_tickets.py  filesystem-tree.md  findings.json  (+18 more)
.archive/: .git_msg.txt
.claude/: settings.local.json
.github/: FUNDING.yml  PR_BODY_COMPLETE_OPTIMIZATION.md  PR_BODY_TKT-001.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  pull_request_template.md
CANONICAL/: CONSTANTS.md  EVIDENCE.md  EVIDENCE_SYSTEM.md  FALSIFICATION.md  LIMITATIONS.md
EPISTEMICS/: ADVERSARIAL_REVIEW_INVITATION.md  CAPABILITY_MATRIX.md  CLAY_COMPLIANCE_STATUS.md  DEEP_STRENGTH_AUDIT.md  INDEPENDENT_REPRODUCTION_PROTOCOL.md  LIMITATIONS.md  OPERATIONAL_S_FIELD.md  RG_SCHEME_SENSITIVITY.md  SCOPE_AND_NON_SCOPE.md
LEDGER/: AI_ARTIFACT_SCAN_REPORT_2026_04_30.md  CLAIMS.json  CLAIMS_ADDENDUM_C054_C056.md  CLAIMS_ADDENDUM_C055_C057.md  CLAIMS_ADDENDUM_C070.md  CLAIMS_C070_upgrade.json  FALSIFICATION.md  OPEN_QUESTIONS_GEOMETRY.md  SESSION2_PHASE8_CLAIMS_SYNC.md  claims.schema.json  external_contributions.md  tickets_new.json
LOCAL/: pr_template.md  schema_sqlite.sql
Supplementary_Results/: Verification_Report_v3.6.1.md
clay-submission/: CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile.clay_audit  GAP_ANALYSIS_CLAY.md  GLOSSARY.md  JOURNAL_STRATEGY.md  LICENSE.md  README.md  REFERENCES.bib  REPRODUCE.md  metadata.yaml  requirements.txt
core/: README.md  banach_proof.py  rg_closure.py  (+2 more)
(+810 files in other folders)
