# ============================================================================
# UIDT v3.9 Canonical — Project Configuration
# Vacuum Information Density as the Fundamental Geometric Scalar
# DOI: 10.5281/zenodo.17835200
# ============================================================================

[project]
name = "uidt-framework"
version = "3.9.0"
description = "Vacuum Information Density as the Fundamental Geometric Scalar"
readme = "README.md"
license = {text = "CC-BY-4.0"}
requires-python = ">=3.10"
authors = [
    {name = "Philipp Rietz", email = "badbugs.arts@gmail.com"},
]
keywords = [
    "yang-mills",
    "mass-gap",
    "theoretical-physics",
    "qcd",
    "vacuum-energy",
    "information-geometry",
    "reproducible-research",
    "high-precision-computing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "mpmath>=1.3.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[project.urls]
Homepage = "https://github.com/Mass-Gap/UIDT-Framework-v3.9-Canonical"
Documentation = "https://github.com/Mass-Gap/UIDT-Framework-v3.9-Canonical/tree/main/docs"
Repository = "https://github.com/Mass-Gap/UIDT-Framework-v3.9-Canonical"
"Bug Tracker" = "https://github.com/Mass-Gap/UIDT-Framework-v3.9-Canonical/issues"
"DOI" = "https://doi.org/10.5281/zenodo.17835200"

[tool.pytest.ini_options]
testpaths = ["verification"]
minversion = "7.0"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["core", "modules"]
omit = ["*/__pycache__/*", "*/tests/*"]

[tool.coverage.report]
show_missing = true
precision = 2
